--- a/negocio-fenix/.project
+++ b/negocio-fenix/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>persistencia-fenix</name>
+	<name>negocio-fenix</name>
 	<comment></comment>
 	<projects>
 	</projects>
