--- a/ear-fenix/pom.xml
+++ b/ear-fenix/pom.xml
@@ -22,5 +22,11 @@
 			<artifactId>persistencia-fenix</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>fenix_project</groupId>
+			<artifactId>web-fenix</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<type>war</type>
+		</dependency>
 	</dependencies>
 </project>
