--- a/web-fenix/pom.xml
+++ b/web-fenix/pom.xml
@@ -43,5 +43,11 @@
 			<type>ejb</type>
 			<scope>provided</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces</artifactId>
+			<version>6.2</version>
+		</dependency>
 	</dependencies>
 </project>
